# multiclip

./: .clang-format  .gitignore  LICENSE  README.md  app.go  clipboard.go  go.mod  main.go  meson.build  run.sh  wails.json
data/: com.harsha.multiclip.desktop  com.harsha.multiclip.metainfo.xml  meson.build
frontend/: index.html
frontend/src/: App.svelte  style.css
frontend/wailsjs/go/main/: App.d.ts  App.js
packaging/: build-packages.sh
packaging/appimage/: build-appimage.sh
packaging/debian/: changelog  control  copyright
packaging/flatpak/: com.harsha.multiclip.yml
packaging/rpm/: multiclip.spec
src/: config.h.in  db.c  db.h  main.c  main.cpp  main.h  meson.build  tray.c  tray.h
