desktop_file = 'com.harsha.multiclip.desktop'
install_data(
  desktop_file,
  install_dir: get_option('datadir') / 'applications'
)

metainfo_file = 'com.harsha.multiclip.metainfo.xml'
install_data(
  metainfo_file,
  install_dir: get_option('datadir') / 'metainfo'
)

install_data(
  'icons/icon.png',
  rename: 'com.harsha.multiclip.png',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / '256x256' / 'apps'
)
